-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
1
-
323f408be (dev), 942b23f92 (6.9), 82a268064 (tqtc/lts-6.8)
-
Foundation Sprint 129
Currently compiling Qt for Android fails if permissions -feature is disabled.
- clones
-
QTBUG-135617 Compile Android without permissions -feature
-
- Closed
-
- is cloned by
-
QTBUG-135693 Compile Android without accessibility -feature
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135675 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 637758,6 | Make Qt for Android configurable without 'clipboard' support | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 641446,3 | Make Qt for Android configurable without 'clipboard' support | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 641732,2 | Make Qt for Android configurable without 'clipboard' support | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |