Make Qt for Android configurable without 'clipboard' support

Fixes: QTBUG-135675
Change-Id: I844cd96f977bd0b5536606cf0c2449a87502231a
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 323f408be6bcf5bfa5e2d447be94381556e52a62)
(cherry picked from commit 942b23f9229b046c2e4c026d676eecf35b67ddb4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>